Fix dark mode background on desktop

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,3 +14,8 @@ body {
     border-color,
     background-color;
 }
+
+html.dark,
+html.dark body {
+  background-color: theme('colors.gray.900');
+}
